Fix medal alignment

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -265,6 +265,7 @@ nav {
   flex-direction: column;
   font-weight: bold;
   color: #666666;
+  width: 60px;
 }
 
 .medal {
